--- a/maps-demo.html
+++ b/maps-demo.html
@@ -81,7 +81,7 @@
   </div>
 
   <script async
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&loading=async&callback=initMap&callback=initAutocomplete&libraries=places,marker&v=weekly"></script>
+    src="https://maps.googleapis.com/maps/api/js?key=APIKEY&loading=async&callback=initMap&callback=initAutocomplete&libraries=places,marker&v=weekly"></script>
 </body>
 
 </html>
